new animation dark-light

--- a/Style.css
+++ b/Style.css
@@ -74,10 +74,15 @@ body * {
   z-index: 1;
   left: 0;
   transform: translateY(-50%);
+
+  animation: slide-back 0.3s;
 }
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.3s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -116,11 +121,13 @@ ul li a {
   font-weight: 500;
   transition: background 0.3s;
 }
+/* pseudo-selector */
 ul li a:hover {
   background-color: var(--surface-color-hover);
   border: 1.5px solid var(--text-color);
 }
 
+/* social links */
 #social-links {
   display: flex;
   justify-content: center;
@@ -146,11 +153,31 @@ footer {
   font-size: 14px;
 }
 
+/* media queries */
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/* animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
